# syn2real_journal

./: .gitignore
src/: README.md
src/baseline_model/: OVERVIEW.md
src/blip_caption/: OVERVIEW.md
src/controlnet_finetuning/: OVERVIEW.md
src/controlnet_sdxl/: OVERVIEW.md  dataset.py  prepare_synthia.py  pyproject.toml  requirements.txt  train_controlnet_sdxl.py
src/deepfloyd_scaler/: OVERVIEW.md
src/gan/: OVERVIEW.md
src/model_eval/: OVERVIEW.md
